still handle navigation search data

--- a/src/Header/Header result search mobi/Modal Filter/Modal Filter Max-width 600px.css
+++ b/src/Header/Header result search mobi/Modal Filter/Modal Filter Max-width 600px.css
@@ -8,6 +8,7 @@
   width: 100vw;
   height: 100vh;
   display: none;
+  z-index: 1;
 }
 #modal__filter__result__search.modal__filter__result__search--active {
   display: block;
