--- a/src/Result Search Items Page/Items Need Search/Items Need Search Max-width 400px.css
+++ b/src/Result Search Items Page/Items Need Search/Items Need Search Max-width 400px.css
@@ -2,3 +2,8 @@
 .result__search__items__page__items__need__search__body--navigations {
     display: none;
 }
+.result__search__items__page__items__need__search__body--items {
+    display: grid;
+    grid-template-columns: repeat(1,1fr) ;
+    gap: 1rem;
+}
