--- a/src/Result Search Items Page/Filter Result Search Items/Filter Result Search Items Max-width 1000px.css
+++ b/src/Result Search Items Page/Filter Result Search Items/Filter Result Search Items Max-width 1000px.css
@@ -42,6 +42,9 @@
     height: 0;
     overflow: hidden;
   }
+  .result__search__items__page__filter__body__items--options--more.result__search__items__page__filter__body__items__options__more--height--auto {
+    height: auto;
+  }
   .result__search__items__page__filter__body__items__options--choose {
     display: flex;
     gap: 0.5rem;
@@ -59,6 +62,19 @@
     align-items: center;
     margin-left: 2rem;
     gap: .5rem;
+    position: relative;
+  }
+  .result__search__items__page__filter__body__items--btn--show--more::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .result__search__items__page__filter__body__items--btn--show--more.result__search__items__page__filter__body__items__btn__show__more--hidden {
+    opacity: 0;
   }
   .result__search__items__page__filter__body__items__btn__show__more--icon {
     width: 1rem;
@@ -91,6 +107,9 @@
     position: absolute;
     left: 0;
     top: 0;
+  }
+  .result__search__items__page__filter__body__items--alert.result__search__items__page__filter__body__items__alert--opacity1 {
+    opacity: 1;
   }
   .result__search__items__page__filter__body__items--btn--submit {
     text-align: center;
