--- a/src/Result Search Items Page/Items Need Search/Items Need Search Min-width 1000px.css
+++ b/src/Result Search Items Page/Items Need Search/Items Need Search Min-width 1000px.css
@@ -67,8 +67,12 @@
     align-items: center;
     text-wrap: nowrap;
     cursor: pointer;
+    position: relative;
   }
-  .result__search__items__page__items__need__search__body__navigations__options--btn.result__search__items__page__items__need__search__body__navigations__options__btn--active {
+  .result__search__items__page__items__need__search__body__navigations__options__price--active {
+    color: #ee4d2d;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options__btn--active {
     background: #ee4d2d;
     color: #fff;
   }
@@ -77,6 +81,47 @@
     width: 1.5rem;
     height: 1.5rem;
     margin-left: 8rem;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options--price:hover
+    > .result__search__items__page__items__need__search__body__navigations__options__price--dropdown {
+    display: block;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options__price--dropdown {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    padding: 1rem;
+    width: 100%;
+    background: #fff;
+    box-shadow: inset 0 0 0.1rem #0005;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+    z-index: 3;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    display: none;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options__price__title--text {
+    opacity: 0;
+    color: #ee4d2d;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options__price__title__text--exchange{
+    opacity: 1;
+  } 
+  .result__search__items__page__items__need__search__body__navigations__options__price__dropdown--items {
+    padding: 1rem 0;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options__price__dropdown--items:hover {
+    color: #ee4d2d;
+  }
+  .result__search__items__page__items__need__search__body__navigations__options__price__dropdown__items--active {
+    color: #ee4d2d;
   }
   .result__search__items__page__items__need__search__body--locaiton {
     display: flex;
@@ -109,17 +154,17 @@
     height: 1.5rem;
     fill: #d0d0d0;
   }
-  .result__search__items__page__items__need__search__body__locaiton__btn--prev.result__search__items__page__items__need__search__body__locaiton__btn__prev--active,
-  .result__search__items__page__items__need__search__body__locaiton__btn--next.result__search__items__page__items__need__search__body__locaiton__btn__next--active {
+  .result__search__items__page__items__need__search__body__locaiton__btn__prev--active,
+  .result__search__items__page__items__need__search__body__locaiton__btn__next--active {
     cursor: pointer;
     background: #ededed;
   }
-  .result__search__items__page__items__need__search__body__locaiton__btn--prev.result__search__items__page__items__need__search__body__locaiton__btn__prev--active:hover,
-  .result__search__items__page__items__need__search__body__locaiton__btn--next.result__search__items__page__items__need__search__body__locaiton__btn__next--active:hover {
+  .result__search__items__page__items__need__search__body__locaiton__btn__prev--active:hover,
+  .result__search__items__page__items__need__search__body__locaiton__btn__next--active:hover {
     background: #fff;
   }
-  .result__search__items__page__items__need__search__body__locaiton__btn__prev--icon.result__search__items__page__items__need__search__body__locaiton__btn__prev__icon--active,
-  .result__search__items__page__items__need__search__body__locaiton__btn__next--icon.result__search__items__page__items__need__search__body__locaiton__btn__next__icon--active {
+  .result__search__items__page__items__need__search__body__locaiton__btn__prev__icon--active,
+  .result__search__items__page__items__need__search__body__locaiton__btn__next__icon--active {
     fill: #575757;
   }
 
@@ -128,12 +173,5 @@
   .result__search__items__page__items__need__search__body__locaiton__btn__next__icon--active:hover
     > .result__search__items__page__items__need__search__body__locaiton__btn__next--icon {
     fill: #575757;
-  }
-
-  .result__search__items__page__items__need__search__body--items {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 1rem;
-    margin-top: 3rem;
   }
 }
