--- a/src/Result Search Items Page/Items Need Search/Items Need Search Min-width 1300px.css
+++ b/src/Result Search Items Page/Items Need Search/Items Need Search Min-width 1300px.css
@@ -14,5 +14,6 @@
     }
     .result__search__items__page__items__need__search__body--items {
         grid-template-columns: repeat(5,1fr) !important;
+        margin-top: 1rem;
     }
 }
