--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   text-decoration: none;
   color: #333;
-  --webkit-tap-highlight-color: rgba(0, 0, 0,0);
+  --webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -87,6 +87,14 @@ html {
     padding: 0;
   }
 }
-.hidden {
-  display: none;
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
