--- a/src/Result Search Items Page/Items Need Search/Render Items/Render Items.module.css
+++ b/src/Result Search Items Page/Items Need Search/Render Items/Render Items.module.css
@@ -5,11 +5,56 @@
   -moz-transition: all .2s linear;
   -ms-transition: all .2s linear;
   -o-transition: all .2s linear;
-  transform: translateY(.3rem);
-  -webkit-transform: translateY(.3rem);
-  -moz-transform: translateY(.3rem);
-  -ms-transform: translateY(.3rem);
-  -o-transform: translateY(.3rem);
+  transform: translateY(1rem);
+  -webkit-transform: translateY(1rem);
+  -moz-transform: translateY(1rem);
+  -ms-transform: translateY(1rem);
+  -o-transform: translateY(1rem);
+  position: relative;
+  z-index: 1;
+}
+.items:hover {
+  transform: translateY(0);
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
+  z-index: 3;
+  border: .1rem solid  #ee4d2d;
+}
+.items::after {
+  text-align: center;
+  text-transform: capitalize;
+  color: #fff;
+  background: #ee4d2d;
+  font-weight: 100;
+  font-size: 1.4rem;
+  content: "find similar";
+  position: absolute;
+  top: 100%;
+  width: 101%;
+  z-index: 2;
+  padding: 0;
+  box-sizing: border-box;
+  padding: 1rem;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  -ms-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  left: -0.5%;
+  border-radius: 0.3rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
+}
+.items:hover::after {
+  opacity: 1;
+  height: auto;
 }
 .items__header {
   display: block;
