update day work 6/6 for project

--- a/src/Header/Header  Mobi/Header  Main Page Mobi Max-width 600px.css
+++ b/src/Header/Header  Mobi/Header  Main Page Mobi Max-width 600px.css
@@ -35,6 +35,10 @@
   justify-content: center;
   gap: 2rem;
 }
+.header__main__page__mobi__box__info--icons {
+  width: 2.4rem;
+  fill: #fff;
+}
 .header__main__page__mobi--slider {
   display: block;
   height: 28rem;
