--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@ html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
+body {
+  background: #efefef;
+}
 .layout {
   padding: 2rem;
   width: 100%;
