--- a/src/Product/Info Shop/Info Shop.module.scss
+++ b/src/Product/Info Shop/Info Shop.module.scss
@@ -103,14 +103,125 @@
             display: flex;
             gap: 1rem;
             margin-top: 0.5rem;
+
             .items {
                 font-size: 1.2rem;
+
                 .paramanter {
                     color: #ee4d2d;
                     margin-right: 0.5rem;
                 }
             }
 
+        }
+
+        .footer {
+            display: flex;
+            width: 100%;
+            gap: 1rem;
+            overflow: hidden;
+            overflow-x: auto;
+
+            .voucher {
+                border: .1rem solid #fbcac1;
+                background: #fff4f4;
+                flex: 0 0 80%;
+                display: flex;
+                min-width: 40rem;
+
+                .value__voucher {
+                    position: relative;
+                    flex: 1;
+                    padding: 1rem;
+                    display: flex;
+                    gap: .3rem;
+                    flex-direction: column;
+
+                    .border__voucher {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    .price {
+                        color: #ee4d2d;
+                        font-size: 1.6rem;
+                    }
+
+                    .max__value {
+                        font-size: 1.1rem;
+                        color: #ee4d2d;
+                    }
+
+                    .out__of__date {
+                        color: #757070;
+                        font-size: 1rem;
+                        margin-top: 1rem;
+                    }
+                }
+
+                .btn__apply__voucher {
+                    display: flex;
+                    align-items: center;
+                    padding: 1rem;
+                    border-left: .1rem dotted #f333;
+
+                    .text__btn {
+                        color: gray;
+                        padding: .2rem 1.5rem;
+                        background: #fff;
+                        font-size: 1.2rem;
+                        border: 0.1rem solid #ee4d2d;
+                        border-radius: .3rem;
+                        -webkit-border-radius: .3rem;
+                        -moz-border-radius: .3rem;
+                        -ms-border-radius: .3rem;
+                        -o-border-radius: .3rem;
+                        text-transform: capitalize;
+                    }
+                }
+            }
+
+            .items__views {
+                display: flex;
+                align-items: center;
+                padding: 1rem;
+                margin-left: 1rem;
+                justify-content: center;
+
+                .btn__show__more {
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .icon {
+                        width: 3.2rem;
+                        height: 3.2rem;
+                        fill: #ee4d2d;
+                    }
+
+                    .text__btn {
+                        text-wrap: nowrap;
+                        text-align: center;
+                        font-size: 1.4rem;
+                        font-weight: 600;
+                        color: #ee4d2d;
+                    }
+                }
+            }
+        }
+
+        .info__description {
+            text-wrap: nowrap;
+            text-align: start;
+            font-size: 1.2rem;
+            font-weight: 100;
+            color: #757070;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
     }
 }
