--- a/src/Product/Swiper Product/Swiper Product.module.scss
+++ b/src/Product/Swiper Product/Swiper Product.module.scss
@@ -1,63 +1,69 @@
 .swiper__product {
-    position: relative;
 
-    .frame {
-        overflow: hidden;
-        position: relative;
-
-        overflow-x: auto;
-        width: 100%;
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
-        display: flex;
-
-        .item {
-            flex: 0 0 100%;
-            scroll-snap-align: center;
+    .layout {
+        padding: 0;
+        .swiper__container__slider {
+            position: relative;
+            .frame {
+                overflow: hidden;
+                position: relative;
+                overflow-x: auto;
+                width: 100%;
+                scroll-behavior: smooth;
+                scroll-snap-type: x mandatory;
+                scrollbar-color: transparent transparent;
+                display: flex;
+    
+                .item {
+                    flex: 0 0 100%;
+                    scroll-snap-align: center;
+                }
+            }
+    
+            .events {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+                pointer-events: none;
+            }
+    
+            .length__swiper {
+                position: absolute;
+                bottom: 1rem;
+                right: 1rem;
+                display: flex;
+                background: #efefef6e;
+                padding: .5rem 1rem;
+                border-radius: 1rem;
+                -webkit-border-radius: 1rem;
+                -moz-border-radius: 1rem;
+                -ms-border-radius: 1rem;
+                -o-border-radius: 1rem;
+                gap: .4rem;
+    
+                .current {
+                    color: #333;
+                    font-weight: 600;
+                    font-size: 1.2rem;
+                    transition: all .3s linear;
+                    -webkit-transition: all .3s linear;
+                    -moz-transition: all .3s linear;
+                    -ms-transition: all .3s linear;
+                    -o-transition: all .3s linear;
+                }
+                
+                .bar {
+                    @extend .current
+                }
+    
+                .max__length {
+                    @extend .current
+                }
+            }
         }
-    }
 
-    .events {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        pointer-events: none;
-    }
-
-    .length__swiper {
-        position: absolute;
-        bottom: 1rem;
-        right: 1rem;
-        display: flex;
-        background: #efefef6e;
-        padding: .5rem 1rem;
-        border-radius: 1rem;
-        -webkit-border-radius: 1rem;
-        -moz-border-radius: 1rem;
-        -ms-border-radius: 1rem;
-        -o-border-radius: 1rem;
-        gap: .4rem;
-
-        .current {
-            color: #333;
-            font-weight: 600;
-            font-size: 1.2rem;
-            transition: all .3s linear;
-            -webkit-transition: all .3s linear;
-            -moz-transition: all .3s linear;
-            -ms-transition: all .3s linear;
-            -o-transition: all .3s linear;
-}
-
-        .bar {
-            @extend .current
-        }
-
-        .max__length {
-            @extend .current
-        }
     }
 }
