update day work 15/06

--- a/src/Product/Other Product/Other__Products.module.scss
+++ b/src/Product/Other Product/Other__Products.module.scss
@@ -38,6 +38,7 @@
         .body {
             overflow: hidden;
             overflow-x: auto;
+            scrollbar-color:  transparent transparent ;
             .body__frame {
                 display: flex;
                 gap: 1rem;
