--- a/src/Product/Price Product/Price Product.module.scss
+++ b/src/Product/Price Product/Price Product.module.scss
@@ -1,12 +1,20 @@
-.price {
-    font-size: 1.6rem;
-    line-height: 1.6rem;
-    font-weight: 600;
-    height: calc(1.6rem * 2);
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    margin-top: 1rem;
-    color: #ee4d2d;
+.price__product {
+    background: #fff;
+
+    .layout {
+
+        padding: 0 2rem;
+
+        .price {
+            font-size: 1.6rem;
+            line-height: 1.6rem;
+            font-weight: 600;
+            height: calc(1.6rem * 2);
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            color: #ee4d2d;
+        }
+    }
 }
