--- a/src/Product/Info Shop/Info Shop.module.scss
+++ b/src/Product/Info Shop/Info Shop.module.scss
@@ -121,7 +121,8 @@
             gap: 1rem;
             overflow: hidden;
             overflow-x: auto;
-
+            scroll-behavior: smooth;
+            scrollbar-color: transparent transparent; 
             .voucher {
                 border: .1rem solid #fbcac1;
                 background: #fff4f4;
