--- a/src/Product/Introduce/Introduce Products.module.scss
+++ b/src/Product/Introduce/Introduce Products.module.scss
@@ -4,7 +4,7 @@
     .layout {
         display: flex;
         align-items: center;
-
+        padding: 1rem;
         .price {
             display: flex;
             flex-direction: column;
