--- a/src/Product/Swiper Product/Swiper Product 500.module.scss
+++ b/src/Product/Swiper Product/Swiper Product 500.module.scss
@@ -9,7 +9,7 @@
                 overflow-y: auto;
                 flex: 1;
                 position: relative;
-                
+                display: block;
                 .nav__frame {
                     position: absolute;
                     display: flex;
