update work day 18/06

--- a/src/Product/Free Return/free_return_1000.module.scss
+++ b/src/Product/Free Return/free_return_1000.module.scss
@@ -6,7 +6,7 @@
     .free__return___product__1000 {
         display: block;
         width: 100%;
-        margin-top: 2rem;
+        margin-top: 3%;
 
         .layout {
             gap: 2rem;
@@ -17,6 +17,7 @@
                 .header__title {
                     font-size: 1.2rem;
                     color: #757575;
+                    width: 7rem;
                 }
             }
 
