--- a/src/Product/Quantity/quantity_1000.module.scss
+++ b/src/Product/Quantity/quantity_1000.module.scss
@@ -3,12 +3,13 @@
     .quantity {
         display: flex;
         gap: 2rem;
-        margin-top: 1rem;
+        margin-top: 3rem;
 
         .quantity__header {
             .header__title {
                 font-size: 1.2rem;
                 color: #757575;
+                width: 7rem;
             }
         }
 
