--- a/src/Product/product_1000.module.scss
+++ b/src/Product/product_1000.module.scss
@@ -4,7 +4,7 @@
         gap: 1rem;
         background: #fff;
         margin-top: 3rem;
-        padding-top: 1rem;
+        padding: 2rem 0;
 
         .ui__products {
             flex: 1;
