--- a/src/Product/Rating Products/Rating Products.module.scss
+++ b/src/Product/Rating Products/Rating Products.module.scss
@@ -83,6 +83,9 @@
                     white-space: nowrap;
                 }
             }
+            .header__filter__star{
+                display: none;
+            }
         }
 
         .body {
