--- a/src/Product/Info Shop/Info Shop.module.scss
+++ b/src/Product/Info Shop/Info Shop.module.scss
@@ -159,7 +159,7 @@
                 flex: 0 0 80%;
                 display: flex;
                 min-width: 40rem;
-
+                max-width: 50rem;
                 .value__voucher {
                     position: relative;
                     flex: 1;
