--- a/src/Product/Voucher/voucher_product_1000.module.scss
+++ b/src/Product/Voucher/voucher_product_1000.module.scss
@@ -2,4 +2,193 @@
     .voucher__product {
         display: none;
     }
+
+    .voucher__product__1000 {
+        display: block;
+        margin-top: 2rem;
+
+        .layout {
+            display: inline-flex;
+            gap: 2rem;
+            position: relative;
+
+            .header {
+                .header__title {
+                    font-size: 1.2rem;
+                    color: #757575;
+                    width: 10rem;
+                    text-wrap: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    text-transform: capitalize;
+                }
+            }
+
+            .body {
+                .body__selections {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 1rem;
+
+                    .body__options {
+                        font-size: 1.1rem;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                        color: #ee4d2d;
+                        background: #fcebed;
+                        padding: .4rem 1rem;
+                        position: relative;
+
+                        &::after {
+                            position: absolute;
+                            content: "";
+                            background-image: linear-gradient(180deg, transparent 50%, #fcebed 50%);
+                            right: 100%;
+                            background-size: .3em .3rem;
+                            background-repeat: repeat-y;
+                            background-position: center;
+                            height: 100%;
+                            width: .2rem;
+                            top: 0;
+
+                        }
+
+                        &::before {
+                            position: absolute;
+                            content: "";
+                            background-image: linear-gradient(180deg, transparent 50%, #fcebed 50%);
+                            left: 100%;
+                            background-size: .3em .3rem;
+                            background-repeat: repeat-y;
+                            background-position: center;
+                            height: 100%;
+                            width: .2rem;
+                            top: 0;
+
+                        }
+
+                        filter: drop-shadow(0 0 0.1rem black);
+                        -webkit-filter: drop-shadow(0 0 0.1rem black);
+                    }
+                }
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                display: block;
+                width: 100%;
+                height: 2rem;
+                left: 1rem;
+                top: 100%;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+
+            .dropdown {
+                position: absolute;
+                top: calc(100% + 2rem);
+                background: #fff;
+                padding: 2rem;
+                left: 1rem;
+                filter: drop-shadow(0 0 .1rem black);
+                -webkit-filter: drop-shadow(0 0 .1rem black);
+                display: none;
+                z-index: 2;
+                &::after {
+                    position: absolute;
+                    content: "";
+                    bottom: 100%;
+                    left: 50%;
+                    border-bottom: 1rem solid #fff;
+                    border-right: 1rem solid transparent;
+                    border-left: 1rem solid transparent;
+                    border-top: 1rem solid transparent;
+                }
+
+                .dropdown__header {
+                    display: flex;
+                    flex-direction: column;
+                    gap: .4rem;
+
+                    .header__title {
+                        font-size: 1.4rem;
+                    }
+
+                    .header__description {
+                        font-size: 1.2rem;
+                        color: #757575;
+                    }
+                }
+
+                .body {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+                    margin-top: 2rem;
+
+                    .body__items {
+                        display: flex;
+                        gap: 1rem;
+                        align-items: center;
+
+                        .items__img {
+                            flex: 1;
+                            border-right: .1rem dotted #3338;
+                        }
+
+                        .items__info {
+                            flex: 3;
+
+                            .info__voucher {
+                                font-size: 1.2rem;
+                                font-weight: 500;
+                            }
+
+                            .info__rule {
+                                @extend .info__voucher
+                            }
+
+                            .info__date {
+                                margin-top: .5rem;
+                                font-size: 1rem;
+                                color: #757575;
+                            }
+                        }
+
+                        .items__btn__get {
+                            display: flex;
+                            align-items: center;
+
+                            .btn__get {
+                                margin-right: 1rem;
+                                padding: .2rem 1rem;
+                                border: .1rem solid #ee4d2d;
+                                border-radius: .3rem;
+                                -webkit-border-radius: .3rem;
+                                -moz-border-radius: .3rem;
+                                -ms-border-radius: .3rem;
+                                -o-border-radius: .3rem;
+                                font-size: 1.1rem;
+                                color: #ee4d2d;
+                                text-transform: uppercase;
+                                cursor: pointer;
+                            }
+                        }
+
+                        box-shadow: 0 0 .1rem #3338;
+                    }
+                }
+
+                border-radius: .1rem;
+                -webkit-border-radius: .1rem;
+                -moz-border-radius: .1rem;
+                -ms-border-radius: .1rem;
+                -o-border-radius: .1rem;
+            }
+        }
+        .layout:hover > .dropdown {
+            display: block;
+        }
+    }
 }
